--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -5,6 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-   hello w万而非
+   hello w万而非deded 
+   <h1 style="color:red;"> dfjdfdk</h1>
 </body>
 </html>
